# macra-bilingual-whatsapp-bot

./: .gitignore  main.py  pyproject.toml  requirements.txt
scripts/: crawl_macra_site.py  ingest_docs.py
src/api/: webhook.py
src/data/: chunking.py  ingest.py  schema.py
src/prompts/: qa_prompt.py
src/services/: handoff.py  qa.py  retrieval.py  routing.py
